--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
+  <link rel="shortcut icon" href="img/favicon.ico">
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>John Doe - Business Administration</title>
+  <title>Olivia Dinh - Extreme Foodie</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -29,7 +29,7 @@
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
       <span class="d-block d-lg-none">John Doe</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/oliviadinh.jpg" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +58,26 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Olivia Dinh
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <div class="subheading mb-5">Extreme Foodie</div>
+        <p class="lead mb-4">My name is Olivia Dinh and I am a second year Biology major at University of California Riverside. I am currently a pre-medicine student seeking to one day become a physician working around the Inland Empire where I can help serve the underserved community. As a college student, I am currently learning how to live on my own and how to cook food for myself. Due to this, I have become extremely interested in different kinds of foods, how they're prepared, and how they taste. My passion for food has grown immensely since coming to college to study as an undergraduate. Living away from home, I have finally realized the importance and meaning behind what it feels like to cook for someone you love, something that my parents have done for me all while I was growing up. Cooking and eating food is a love language that I wish to further my experience and skills in. <br><br>
 
-        Enter bio here<br><br>
+        Coming from Irvine, California, I was fortunate enough to live around many popular food places. Irvine is known for its abundance of Asian food and culture, something that I had taken for granted when I lived there. Beyond Irvine, I have eaten in other areas in Orange County, as well as here in Inland Empire's Riverside. I do go to eat out in Los Angeles quite a few times. I would say I have gathered my experience in a wide variety of foods in Southern California. Rather than eating at home, I actually ate out a lot at several different places in high school, widening my culinary tastes. I have a wide range of food experience meaning I do not determine how good the food is based off of how expensive it is. I believe that good food is present everywhere, regardless of location and price.<br><br>
 
-        Enter bio here
+        With this in mind, there is still much I would like to spend time developing for myself. I would like to be exposed to more types of food, rather than only Southern California's food, as I believe that food changes with culture as well as location. In order to really become the expert in cooking I wish to one day be, I need to learn more about the different kinds of foods and flavors there are. I am very willing to put in as much work as necessary to complete the task and have a very determined mindset where I will not give up a task until it is perfected. I personally believe that there is no purpose in only putting half of my efforts into something I genuinely want to pursue and because of this, I tend to strive for the best, putting in all the effort I have inside. I am still new to this and am very humble, fully aware that I have much to learn if I want to one day cook all types of exquisite food that I have been lucky enough to eat in my life thus far.
         </p>
         <div class="social-icons">
-          <a target="_blank" href="https://linkedin.com">
+          <a target="_blank" href="https://www.linkedin.com/in/olivia-dinh-9119461a2/">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" href="https://github.com">
+          <a target="_blank" href="https://github.com/OliviaDinh">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" href="https://twitter.com">
+          <a target="_blank" href="https://twitter.com/oliviaadinh">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" href="mailto:youremail@gmail.com">
+          <a target="_blank" href="mailto:odinh001@ucr.edu">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -92,48 +92,48 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://mulesoft.com">Company</a></div>
+            <h3 class="mb-0">Front Desk Assistant at Doctor's Office</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://doctor.webmd.com/doctor/victor-dinh-c0fec5b5-5952-4167-ba03-00da26f7d891-overview">Family Physician's Office</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Welcome patients, take their height, weight, and vital signs<br> 
+              • Printed prescriptions<br>
+              • Faxed prescriptions and other pertinent papers<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">June 2017 - Present</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://pubnub.com">Whole Foods</a></div>
+            <h3 class="mb-0">COPE Health Scholar Department Coordinator</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://copehealthscholars.org/programs/health-scholar/overview/">COPE Health Scholars</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              • Creating shifts for COPE Health Scholars, confirming hours for shifts<br>
+              • Participating in Training of Health Scholars, attending all meetings, interviews, and clearance appointments<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">December 2019 - Present</span>
           </div>
         </div>
 
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
+            <h3 class="mb-0">Mini-Medical School Prenatal Health Presenter</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://mms.ucr.edu/">University of California Riverside</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
+            • Maintain communication with Project Leader, Executive Board, and UCR School of Medicine Students<br>
+            • Attend meetings and trainings organized by Project Leader<br>
+            • Be knowledgeable enough to present on topic at events in Inland Empire<br>
+            • Be open to incorporating new ideas to teach<br>
 
           </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+            <span class="text-primary">September 2019 - Present</span>
           </div>
         </div>
 
@@ -152,33 +152,11 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <div class="subheading mb-3">Bachelor's Degree in Science</div>
+            <div>B.S. in Biology</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
+            <span class="text-primary">September 2018 - June 2022</span>
           </div>
         </div>
 
@@ -191,7 +169,11 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+            <img src="img/yummy.jpg" width="500px">
+            <img src="img/IMG_5135.JPG" width="500px"><br>
+            <img src="img/IMG_6657.JPG" width="500px">
+            <img src="img/IMG_6715.JPG" width="500px"><br>
+            <img src="img/IMG_6736.JPG" width="500px">
         </center>
       </div>
     </section>
